Successfully searching page and displaying results

--- a/popUp.html
+++ b/popUp.html
@@ -2,6 +2,8 @@
 Test Popup
 <button id="searchThisPage">Search Page</button>
 
+<div id="Results"></div>
+
 </body>
 
 <script src="popUp.js"></script>
